# airflow_hydrosat_pdqueiros

./: .env  .gitignore  Dockerfile  README.md  docker-compose-airflow.yaml  docker-compose-monitoring.yaml  docker-compose-storage.yaml  docker-compose.yaml  env.sh  pyproject.toml
config/: airflow.cfg
dags/: dags.py
plugins/: email_callback.py
scripts/: create_env.sh
src/airflow_hydrosat_pdqueiros/: settings.py
src/airflow_hydrosat_pdqueiros/core/: base_task.py  get_tasks.py  process_task.py
src/airflow_hydrosat_pdqueiros/core/documents/: asset_data_document.py  base_document.py  bounding_box_document.py  field_document.py
src/airflow_hydrosat_pdqueiros/io/: logger.py  s3_client.py
tests/: create_sample_data.py
